--- a/Onsalefaneus.Prism/Onsalefaneus.Prism.iOS/Onsalefaneus.Prism.iOS.csproj
+++ b/Onsalefaneus.Prism/Onsalefaneus.Prism.iOS/Onsalefaneus.Prism.iOS.csproj
@@ -201,6 +201,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator">
       <Version>19.1.0.56</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator">
+      <Version>19.1.0.56</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
     <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.5.3.2" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="8.0.0.1909" />
