--- a/Onsalefaneus.Prism/Onsalefaneus.Prism/Onsalefaneus.Prism.csproj
+++ b/Onsalefaneus.Prism/Onsalefaneus.Prism/Onsalefaneus.Prism.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Syncfusion.Licensing" Version="19.1.0.56" />
     <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator" Version="19.1.0.56" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator" Version="19.1.0.56" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
