--- a/Onsalefaneus.Prism/Onsalefaneus.Prism/Onsalefaneus.Prism.csproj
+++ b/Onsalefaneus.Prism/Onsalefaneus.Prism/Onsalefaneus.Prism.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator" Version="19.1.0.56" />
     <PackageReference Include="Syncfusion.Xamarin.SfRating" Version="19.1.0.56" />
     <PackageReference Include="Syncfusion.Xamarin.SfRotator" Version="19.1.0.56" />
+    <PackageReference Include="Xam.Plugin.Media" Version="5.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
